# mcts-robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makeGif.sh  makeVideo.sh
include/: auxilliary.hpp  env.hpp  mcts.hpp  pomcp.hpp
script/: auxilliary.py  env.py  main.py  pomcp.py  utils.py
src/: main.cpp
